test/Fail/RewritingNotSafe.err
RewritingNotSafe.agda:2,1-28: error: [OptionError]
Option --safe cannot be combined with option --rewriting
